--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,8 @@ Mex (Release)/
 *.lo
 *.o
 *.obj
+*.mex
+*.mexa64
 
 # Precompiled Headers
 *.gch
@@ -80,3 +82,6 @@ Mex (Release)/
 # Compiled MEX binaries (all platforms)
 *.mex*
 /Mex
+
+# Visual Studio Project builds
+/prj-vstudio/build
